Fix layout of tags so they don't overlap

--- a/app/assets/sass/utilities/_overrides.scss
+++ b/app/assets/sass/utilities/_overrides.scss
@@ -30,3 +30,13 @@
   overflow-wrap: break-word;
   word-break: break-all;
 }
+
+.app-tag-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: govuk-spacing(1);
+
+  .govuk-tag {
+    margin: 0;
+  }
+}
